# tic-tac-toe-rp2040

./: CMakeLists.txt  README.md  backlight.c  framebuffer.c  gamepad.c  lcd.c  main.c  music.c  system.c
game/: game.c  game.h  game_types.h  resource.c  resource.h
inc/: backlight.h  config.h  framebuffer.h  gamepad.h  lcd.h  music.h  system.h  timage.h  tmusic.h
res/: resources.lst
res/fnts/: big_font.json  small_font.json
res/music/: harry.pwm
tools/: make_resource.py
uf2/: ttt2040.uf2
